--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#FFA500</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="blue">#0E27CD</color>
+    <color name="red">#FF0000</color>
+    <color name="navy">#000080</color>
+    <color name="pink">#FFC0CB</color>
 </resources>
