--- a/app/src/main/res/layout/activity_mess_food_ordering.xml
+++ b/app/src/main/res/layout/activity_mess_food_ordering.xml
@@ -131,7 +131,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toEndOf="@id/img_salad"
         app:layout_constraintTop_toBottomOf="@id/sides"
-        android:text="Raita"
+        android:text="Salad"
         android:fontFamily="sans-serif-black"/>
 
     <ImageButton
@@ -164,7 +164,10 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@id/orderMeal"
+        android:fontFamily="sans-serif-black"
         android:textSize="30dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
