Added spinner codes

--- a/app/src/main/res/layout/activity_color_changer_grid.xml
+++ b/app/src/main/res/layout/activity_color_changer_grid.xml
@@ -16,7 +16,7 @@
     <GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="match_parent"
-        android:layout_height="630dp"
+        android:layout_height="match_parent"
         android:rowCount="4"
         android:columnCount="3">
 
