--- a/app/src/main/res/layout/activity_spinner_with_images.xml
+++ b/app/src/main/res/layout/activity_spinner_with_images.xml
@@ -4,28 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/spinner_screen"
-    android:background="@drawable/img_7"
-    tools:context=".spinners">
+    android:id="@+id/new_spinner"
+    tools:context=".SpinnerWithImages">
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="409dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="53dp"
         android:layout_marginTop="50dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <ListView
         android:id="@+id/list1"
-        android:layout_width="409dp"
-        android:layout_height="655dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="75dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/spinner"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
