--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@color/black"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:id="@+id/mainScreen"
+    android:background="@color/navy">
 
-    <EditText
-        android:id="@+id/editTextText"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:layout_gravity="center"
-        android:layout_margin="25dp"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:hint="Name" />
-
-    <EditText
-        android:id="@+id/editTextText2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number|phone"
-        android:layout_gravity="center"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:layout_margin="25dp"
-        android:hint="Mobile Number" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="25dp"
-        android:text="Sign in" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/flipkart"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias=".1"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/loginPage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login Page"
+        android:textColor="@color/yellow"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logo"
+        android:textSize="50dp"/>
+
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/username"
+        android:layout_margin="40dp"
+        app:layout_constraintTop_toBottomOf="@id/loginPage"
+        android:hint="Enter your username"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/password"
+        android:hint="Enter your password"
         android:textColor="@color/white"
-        android:layout_gravity="center"
-        android:layout_margin="25dp" />
-</LinearLayout>
+        android:textColorHint="@color/white"
+        android:layout_margin="40dp"
+        app:layout_constraintTop_toBottomOf="@id/username"/>
+
+    <ImageButton
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:id="@+id/login"
+        android:layout_margin="40dp"
+        app:layout_constraintStart_toStartOf="@id/password"
+        app:layout_constraintEnd_toEndOf="@id/password"
+        app:layout_constraintTop_toBottomOf="@id/password"
+        android:src="@color/yellow"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/loginText"
+        app:layout_constraintStart_toStartOf="@id/login"
+        app:layout_constraintEnd_toEndOf="@id/login"
+        app:layout_constraintTop_toTopOf="@id/login"
+        app:layout_constraintBottom_toBottomOf="@id/login"
+        android:text="Login"
+        android:textSize="25dp"
+        android:textColor="@color/black"
+        android:fontFamily="sans-serif-black"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
