--- a/app/src/main/res/layout/activity_bmicalculator_app.xml
+++ b/app/src/main/res/layout/activity_bmicalculator_app.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:text="BMI Calculator"
+        android:text="@string/bmi_calculator"
         android:padding="20dp"
         android:gravity="center"
         android:background="@color/black"
