--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -45,9 +45,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to Flipkart!"
         android:textColor="@color/white"
-        android:textSize="40dp"
+        android:id="@+id/txt"
+        android:textSize="25dp"
         app:layout_constraintTop_toBottomOf="@id/sale"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias=".3"
