--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="orange">#FFA500</color>
     <color name="yellow">#FFFF00</color>
     <color name="blue">#0E27CD</color>
+    <color name="skyblue">#DD8CDBFF</color>
     <color name="red">#FF0000</color>
-    <color name="navy">#000020</color>
+    <color name="navy">#02022B</color>
     <color name="pink">#FFC0CB</color>
 </resources>
