Updated dialog box stuff and portfolio

--- a/app/src/main/res/menu/portfolio_menu.xml
+++ b/app/src/main/res/menu/portfolio_menu.xml
@@ -16,4 +16,10 @@
         android:title="Feedback"
         app:showAsAction="always"
         android:icon="@drawable/feedback"/>
+
+    <item
+        android:id="@+id/exit"
+        android:title="Exit"
+        app:showAsAction="always"
+        android:icon="@drawable/exit"/>
 </menu>
