Added language changer and stuff

--- a/app/src/main/res/layout/activity_localization_example2.xml
+++ b/app/src/main/res/layout/activity_localization_example2.xml
@@ -11,6 +11,7 @@
         android:id="@+id/translateMesssage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="30dp"
         android:text="@string/vision"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
